UI Layout completed

--- a/t01-1c_ui/resource.qrc
+++ b/t01-1c_ui/resource.qrc
@@ -7,5 +7,6 @@
         <file>Resources/MINIMISE_BUTTON_HOVER.png</file>
         <file>Resources/MINIMISE_BUTTON_PRESSED.png</file>
         <file>Resources/BORDER.png</file>
+        <file>Resources/BORDER_COMBO.png</file>
     </qresource>
 </RCC>
