--- a/t01-1c_ui/mainwindow.ui
+++ b/t01-1c_ui/mainwindow.ui
@@ -173,7 +173,7 @@ QGroupBox::title {
      <string>My To-Do List : </string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="CTable" name="tableWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -183,7 +183,7 @@ QGroupBox::title {
      </rect>
     </property>
    </widget>
-   <widget class="QProgressBar" name="progressBar">
+   <widget class="CProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
       <x>122</x>
@@ -191,6 +191,25 @@ QGroupBox::title {
       <width>261</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>11</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QProgressBar {
+     border: 2px solid grey;
+     border-radius: 5px;
+     text-align: center;
+ }
+
+ QProgressBar::chunk {
+	background-color: rgb(146, 176, 240);
+ }</string>
     </property>
     <property name="value">
      <number>24</number>
@@ -427,6 +446,16 @@ QGroupBox::title {
    <class>CLineEdit</class>
    <extends>QLineEdit</extends>
    <header>clineedit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CTable</class>
+   <extends>QTableWidget</extends>
+   <header>ctable.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CProgressBar</class>
+   <extends>QProgressBar</extends>
+   <header>cprogressbar.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
