--- a/t01-1c_ui/mainwindow.ui
+++ b/t01-1c_ui/mainwindow.ui
@@ -46,7 +46,7 @@
      </font>
     </property>
     <property name="text">
-     <string>T09-1c</string>
+     <string>GOODLE</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -113,21 +113,23 @@ QGroupBox::title {
  } </string>
     </property>
     <property name="title">
-     <string>Terminal</string>
+     <string>Input</string>
     </property>
     <widget class="QLabel" name="commandLabel">
      <property name="geometry">
       <rect>
-       <x>150</x>
+       <x>100</x>
        <y>10</y>
-       <width>551</width>
+       <width>601</width>
        <height>21</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>Segoe UI</family>
-       <pointsize>14</pointsize>
+       <family>Segoe UI Semibold</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <property name="text">
@@ -246,7 +248,7 @@ QGroupBox::title {
     <property name="font">
      <font>
       <family>Segoe UI</family>
-      <pointsize>12</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
