--- a/t01-1c_ui/mainwindow.ui
+++ b/t01-1c_ui/mainwindow.ui
@@ -247,8 +247,10 @@ QGroupBox::title {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
-      <pointsize>10</pointsize>
+      <family>Segoe UI Semibold</family>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
